--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
       </div>
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-          <img src="{{ "\images\person_1.jpg" | relative_url }}" alt="Image" class="img-fluid card">
+          <img src="/images/person_1.jpg" alt="Image" class="img-fluid card">
         </div>
         <div class="col-lg-6 ml-auto">
           <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Viktor Tochi</h2>
