--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@ layout: default
       </div>
       <div class="row mb-5">
         <div class="col-12" data-aos="fade-up" data-aos-delay="300">
-          <img src="/images/hero_1.jpg" alt="Image" class="img-fluid card">
+          <img src="../images/hero_1.jpg" alt="Image" class="img-fluid card">
         </div>
       </div>
       <div class="row">
@@ -49,7 +49,7 @@ layout: default
             tempora ipsum. Neque, delectus tenetur.</p>
           <div class="d-flex coordinator align-items-center">
             <div class="mr-4">
-              <img src="/images/person_2.jpg" alt="Image" class="img-fluid card">
+              <img src="../images/person_2.jpg" alt="Image" class="img-fluid card">
             </div>
             <span>By <span class="text-white">Viktor Tochi</span> <br> Founder and CEO &mdash; Youujet! Inc.</span>
           </div>
