--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -1,5 +1,5 @@
 ---
-permalink: /blog
+permalink: /thoughts
 layout: default
 title: About Life and Things
 description: A blog about the gracefulness and failures that life gives
