Minor changes to link

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,5 +1,5 @@
 ---
-permalink: /gallery
+permalink: /gallery/
 layout: default
 ---
 <div class="site-section site-hero inner">
@@ -16,7 +16,7 @@ layout: default
     <div class="container">
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-          <a href="/gallery/portraits/"><img src="/images/person_1.jpg" alt="Image" class="img-fluid card"></a>
+          <a href="{{ "/gallery/portraits/" | relative_url }}"><img src="{{ "/images/person_1.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
         </div>
         <div class="col-lg-6 ml-auto">
           <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Portraits</h2>
