Minor changes to link

--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -1,12 +1,9 @@
 ---
-permalink: /thoughts
+permalink: /thoughts/
 layout: default
 title: About Life and Things
 description: A blog about the gracefulness and failures that life gives
 ---
-
-
-
 
 
 
