--- a/gallery/portraits/index.html
+++ b/gallery/portraits/index.html
@@ -1,5 +1,5 @@
 ---
-permalink: /gallery/portraits/
+permalink: /gallery/portraits/index.html
 layout: default
 galleryName: "Portraits Gallery"
 ---
