--- a/gallery/index.html
+++ b/gallery/index.html
@@ -21,7 +21,7 @@ layout: default
         <div class="col-lg-6 ml-auto">
           <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Portraits</h2>
           <div class="bio pl-lg-5">
-            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300"> <a href="/gallery/portraits/">Explore Portraits</a></span>
+            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300"> <a href="{{ "/gallery/portraits/" | relative_url }}">Explore Portraits</a></span>
             <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur
               adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab
               voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam
