Minor changes to gallery links

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -32,12 +32,12 @@ layout: default
       </div>
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0 order-lg-2" data-aos="fade" data-aos-delay="100">
-          <a href="/gallery/nature/"><img src="/images/person_2.jpg" alt="Image" class="img-fluid card"></a>
+          <a href="{{ "/gallery/nature/" | relative_url }}"><img src="{{ "/images/person_2.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
         </div>
         <div class="col-lg-6 ml-auto order-lg-1">
           <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Nature</h2>
           <div class="bio pr-lg-5">
-            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300"><a href="/gallery/nature/">Explore Nature</a></span>
+            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300"><a href="{{ "/gallery/nature/" | relative_url }}">Explore Nature</a></span>
             <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur adipisicing
               elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima
               architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam</p>
@@ -47,12 +47,12 @@ layout: default
       </div>
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-          <a href="/gallery/people/"><img src= "/images/person_3.jpg" alt="Image" class="img-fluid card"></a>
+          <a href="{{ "/gallery/people/" | relative_url }}"><img src= "{{ "/images/person_3.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
         </div>
         <div class="col-lg-6 ml-auto">
           <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">People</h2>
           <div class="bio pl-lg-5">
-            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300"><a href="/gallery/people/">Explore People</a></span>
+            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300"><a href="{{ "/gallery/people/" | relative_url }}">Explore People</a></span>
             <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur
               adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab
               voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam
@@ -63,12 +63,12 @@ layout: default
       </div>
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0 order-lg-2" data-aos="fade" data-aos-delay="100">
-          <a href="/gallery/events/"><img src= "/images/person_4.jpg" alt="Image" class="img-fluid card"></a>
+          <a href="{{ "/gallery/events/" | relative_url }}"><img src= "{{ "/images/person_4.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
         </div>
         <div class="col-lg-6 ml-auto order-lg-1">
           <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Events</h2>
           <div class="bio pr-lg-5">
-            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300"><a href="/gallery/events/">Explore Events</a></span>
+            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300"><a href="{{ "/gallery/events/" | relative_url }}">Explore Events</a></span>
             <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur adipisicing
               elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima
               architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam</p>
