--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
       </div>
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-          <img src="/images/person_1.jpg" alt="Image" class="img-fluid card">
+          <img src="{{ "/images/person_1.jpg" | relative_url }}" alt="Image" class="img-fluid card">
         </div>
         <div class="col-lg-6 ml-auto">
           <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Viktor Tochi</h2>
@@ -41,7 +41,7 @@ layout: default
               <a href="#" class="p-2"><span class="icon-facebook"></span></a>
               <a href="#" class="p-2"><span class="icon-twitter"></span></a>
               <a href="#" class="p-2"><span class="icon-github"></span></a>
-              &mdash; Read more about Vik <a href="/about"> HERE!</a>
+              &mdash; Read more about Vik <a href="{{ "/about" | relative_url }}"> HERE!</a>
             </p>
           </div>
         </div>
@@ -67,7 +67,7 @@ layout: default
         {% for post in site.posts limit:3 %}
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="200">
           <a href="{{ post.url }}" class="d-block mb-4">
-            <img src="/images/img_1.jpg" alt="Image" class="img-fluid card">
+            <img src="{{ "/images/img_1.jpg" | relative_url }}" alt="Image" class="img-fluid card">
           </a>
           <h2 class="mb-4"><a href="{{ post.url }}">{{ post.title }}</a></h2>
           <div class="mb-4 post-meta d-flex align-items-center">
@@ -81,7 +81,7 @@ layout: default
 
       <div class="row" data-aos="fade-up" data-aos-delay="500">
         <div class="col-12 text-center">
-          <a href="/blog/" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>More Blog Posts</span></a>
+          <a href="{{ "/thoughts/" | relative_url }}" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>More Blog Posts</span></a>
         </div>
       </div>
     </div>
