Add intro text content to all pages

--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,6 @@
 ---
 permalink: /about/
+title: About Viktor Tochi
 layout: default
 ---
 
@@ -8,7 +9,7 @@ layout: default
       <div class="row align-items-center">
         <div class="col-md-10">
           <span class="d-block mb-3 caption" data-aos="fade-up">Get To Know Vik.</span>
-          <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">About Rusty Kid from West Africa</h1>
+          <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">How much is there to know about a person? </h1>
         </div>
       </div>
     </div>
@@ -22,11 +23,12 @@ layout: default
           </div>
         </div>
         <div class="col-lg-5 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus
-            eligendi. Nesciunt repellendus ab voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum
-            ducimus. Culpa distinctio! Aperiam!</p>
-          <p>voluptatem nulla repellendus enim perspiciatis reiciendis iusto assumenda neque quaerat quidem architecto.
+          <p>Born and raised in Nigeria &mdash; born in the South and raised in the Central-North. In the span of over two decades, I have learnt valuable lessons from my interactions with people from around the world. And in all of that murkiness of figuring out life, I have found that nothing beats a good sleep after a day's work. </p>
+          <p>After I was born, life happened bla bla bla, I graduated from UC Berkeley after 4 years, served my country for a year, and now looking to achieve my childhood dreams of working around the clock while creating memorable moments that I will share with my kids.</p>
+          <p>I am not an overthinker, but sometimes I try to find meaning in things that seem stupid just the way I am trying to find meaning in my life right now. At the moment, I am probably thinking of my next blog post, working or sleeping.  
           </p>
+          <p>The greatest advice I have ever gotten is to wear my mind like a garment and wash it whenever it was dirty &mdash; I gave myself this advice. </p>
+          <p>To answer the big question above &mdash; there is a lot to know about people, but there isn't much to know about me, although I like to believe I know a lot about myself.</p>
         </div>
       </div>
       <div class="row mb-5">
@@ -35,18 +37,14 @@ layout: default
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="400"><span class="text-primary">|&mdash;| The Gist |&mdash;|</span>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="400"><span class="text-primary">|&mdash;| At 16, I wrote this letter to my friends |&mdash;|</span>
         </div>
         <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex et rem ea, voluptatem harum autem
-            reprehenderit dolor, asperiores voluptate, odio expedita modi quam eum suscipit, ut illum consequuntur
-            atque. Nisi.</p>
-          <p>Cupiditate nostrum aliquam rem et, blanditiis iusto ipsa ab aspernatur tenetur ad! Dicta perspiciatis,
-            laborum at natus hic nulla laboriosam, suscipit iusto quas animi, numquam sunt. Vel nemo aliquam asperiores.
+          <p>The world is indeed chaotic and full of problems as well as beautiful things and people all encompassed in nature so unimaginably designed. </p>
+          <p>Our duty however, is to become resolute in our trajectory to make the world a better place one step at a time through smiles and actions as the years go by &mdash; that is my aim in life and I hope it is yours too. 
           </p>
-          <p class="mb-5">Aspernatur sequi eum debitis illum inventore. Labore libero, minus tenetur, mollitia eaque
-            officiis molestiae necessitatibus fugit at architecto eum recusandae nam, saepe aspernatur unde alias
-            tempora ipsum. Neque, delectus tenetur.</p>
+          <p>Therefore, here lies both the freedoms and excesses of this world, and here is your heart. Feel it, touch it, own it, and don't let it fail.</p>
+          <p class="mb-5">I fear each day for what might be, but I am extremely excited for the things that I will wrath. <br> <em>So walk with me.</em></p>
           <div class="d-flex coordinator align-items-center">
             <div class="mr-4">
               <img src="{{ "/images/person_2.jpg" | relative_url }}" alt="Image" class="img-fluid card">
