--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Home 
 ---
 
 <div class="site-section site-hero">
@@ -7,7 +8,8 @@ layout: default
       <div class="row align-items-center">
         <div class="col-md-10">
           <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">You are here...</span>
-          <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Welcome to Tochi Viktor</h1>
+          <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Welcome to the home of my mind flights.</h1>
+          <p class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="300"> &mdash; Most times, I am either trying to work or sleeping in..</p>
           
           <a href="#blog" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Read Blog</span></a>
         </div>
@@ -31,17 +33,18 @@ layout: default
         <div class="col-lg-6 ml-auto">
           <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Viktor Tochi</h2>
           <div class="bio pl-lg-5">
-            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Development Economist | Programmer | Data Analyst</span>
-            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab
-              voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam
+            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Development Economist | Web Developer | Data Analyst</span>
+            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">I am <strong>Viktor Tochi Okoro.</strong> <br>I studied Development Economics at Berkeley, but these days I write code for a living. I strongly believe in lifelong learning thats why surfing google and stack overflow for resolved issues and bug fixes is my hobby. <br> My life is quite messy on its periphery but at its core I live to make small positive changes in my immediate communities because the world is quite too big for me for now. 
             </p>
             <p data-aos="fade-right" data-aos-delay="500">
-              Follow Tochi Viktor &mdash;
-              <a href="#" class="p-2"><span class="icon-facebook"></span></a>
+              Read more about Vik <a href="{{ "/about" | relative_url }}">HERE!</a>
+            </p>
+            <p data-aos="fade-right" data-aos-delay="500">
+              &mdash; Follow Viktor Tochi &mdash;
+              <a href="#" class="p-2"><span class="icon-linkedin"></span></a>
               <a href="#" class="p-2"><span class="icon-twitter"></span></a>
               <a href="#" class="p-2"><span class="icon-github"></span></a>
-              &mdash; Read more about Vik <a href="{{ "/about" | relative_url }}"> HERE!</a>
+              <a href="www.instagram.com/viktortochi" class="p-2"><span class="icon-instagram"></span></a>
             </p>
           </div>
         </div>
@@ -59,8 +62,7 @@ layout: default
           </div>
         </div>
         <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus
-            eligendi. Nesciunt repellendus ab voluptatibus.</p>
+          <p> Once in a while I write about things I find interesting in my life and work, so this is my blog about life and things. </p>
         </div>
       </div>
       <div class="row mb-5">
@@ -71,7 +73,7 @@ layout: default
           </a>
           <h2 class="mb-4"><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a></h2>
           <div class="mb-4 post-meta d-flex align-items-center">
-            <div class="mr-2"><img src="{{ "/images/img_30.jpg" | relative_url }}" alt="Image" class="img-fluid card"></div>
+            <!--<div class="mr-2"><img src="{{ "/images/img_30.jpg" | relative_url }}" alt="Image" class="img-fluid card"></div>-->
             <div><span>By <a href="#blog">{{ post.author }}</a></span> &mdash; <span>{{ post.date | date: '%B %d, %Y' }}</span></div>
           </div>
           <p>{{ post.excerpt | strip_html | truncatewords: 60 }}</p>
@@ -92,67 +94,27 @@ layout: default
       <div class="row mb-5">
         <div class="col-lg-4" data-aos="fade-up">
           <div class="site-section-heading">
-            <h2>Projects | Resume</h2>
+            <h2>Working on..</h2>
           </div>
         </div>
         <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus
-            eligendi. Nesciunt repellendus ab voluptatibus.</p>
+          <p>I work on a lot of small things because I believe they matter too, but once in while I work on semi-big stuffs.</p>
         </div>
       </div>
       <div class="row align-items-stretch program">
         <div class="col-12 border-top border-bottom py-5" data-aos="fade" data-aos-delay="200">
           <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">8:00</span> <span>AM</span></div>
+            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">01:01:2020</span> <span>-PRESENT</span></div>
             <div class="col-md-9">
-              <h2 class="text-white">Design your open source strategy</h2>
-              <span>Chris Mathews</span>
+              <h2 class="text-white">Youujet! &mdash; a social collaboration network for young Nigerian professionals</h2>
+              <p data-aos="fade-right" data-aos-delay="500">
+                Read more about youujet! <a href="{{ "/" | relative_url }}">HERE!</a>
+              </p>
+              <span>By &mdash; Vik and Co.</span>
             </div>
           </div>
         </div>
-        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="300">
-          <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">9:30</span> <span>AM</span></div>
-            <div class="col-md-9">
-              <h2 class="text-white">Design your open source strategy</h2>
-              <span>Chris Mathews</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="400">
-          <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">10:30</span> <span>AM</span></div>
-            <div class="col-md-9">
-              <h2 class="text-white">Design your open source strategy</h2>
-              <span>Chris Mathews</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="500">
-          <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">10:45</span> <span>NOON</span></div>
-            <div class="col-md-9">
-              <h2 class="text-white">Break With Snacks</h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="600">
-          <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">11:30</span> <span>AM</span></div>
-            <div class="col-md-9">
-              <h2 class="text-white">Design your open source strategy</h2>
-              <span>Chris Mathews</span>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="700">
-          <div class="row align-items-stretch">
-            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">12:00</span> <span>NOON</span></div>
-            <div class="col-md-9">
-              <h2 class="text-white">Break For Lunch</h2>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
   </div>
