--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -1,7 +1,7 @@
 ---
 permalink: /thoughts/
 layout: default
-title: About Life and Things
+title: Tochi's blog about Life and Things
 description: A blog about the gracefulness and failures that life gives
 ---
 
@@ -27,7 +27,7 @@ description: A blog about the gracefulness and failures that life gives
           </a>
           <h2 class="mb-4"><a href= "{{site.baseurl}}{{ post.url }}" | relative_url }}" >{{ post.title }}</a></h2>
           <div class="mb-4 post-meta d-flex align-items-center">
-            <div class="mr-2"><img src="{{ "/images/img_30.jpg" | relative_url }}" alt="Image" class="img-fluid card"></div>
+            <!--<div class="mr-2"><img src="{{ "/images/img_30.jpg" | relative_url }}" alt="Image" class="img-fluid card"></div>-->
             <div><span>By <a href="#">{{ post.author }}</a></span> &mdash; <span>{{ post.date | date: '%B %d, %Y' }}</span></div>
           </div>
           <p>{{ post.excerpt | strip_html | truncatewords: 60 }}</p>
