--- a/contact/index.html
+++ b/contact/index.html
@@ -1,12 +1,13 @@
 ---
 permalink: /contact/
+title: Contact Viktor Tochi
 layout: default
 ---
 <div class="site-section site-hero inner">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-10">
-          <span class="d-block mb-3 caption" data-aos="fade-up">Get In Touch</span>
+          <span class="d-block mb-3 caption" data-aos="fade-up">Got a job for me? Get In Touch</span>
           <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Contact Vik</h1>
         </div>
       </div>
@@ -55,7 +56,7 @@ layout: default
         <div class="col-md-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
           <div class="p-4 mb-3">
             <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Address</p>
-            <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
+            <p class="mb-4">Abuja, Nigeria</p>
             <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Phone</p>
             <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
             <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Email Address</p>
