Add image changes to home and about place, and change events to places gallery

--- a/about/index.html
+++ b/about/index.html
@@ -24,8 +24,8 @@ layout: default
         </div>
         <div class="col-lg-5 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
           <p>Born and raised in Nigeria &mdash; born in the South and raised in the Central-North. In the span of over two decades, I have learnt valuable lessons from my interactions with people from around the world. And in all of that murkiness of figuring out life, I have found that nothing beats a good sleep after a day's work. </p>
-          <p>After I was born, life happened bla bla bla, I graduated from UC Berkeley after 4 years, served my country for a year, and now looking to achieve my childhood dreams of working around the clock while creating memorable moments that I will share with my kids.</p>
-          <p>I am not an overthinker, but sometimes I try to find meaning in things that seem stupid just the way I am trying to find meaning in my life right now. At the moment, I am probably thinking of my next blog post, working or sleeping.  
+          <p>After I was born, life happened bla bla bla, I graduated from UC Berkeley after 4 years, served my country for 1 year, and now looking to achieve my childhood dream of working around the clock while creating memorable moments that I will share with my kids.</p>
+          <p>I am not an overthinker, but sometimes I try to find meaning in things that seem stupid just the way I am trying to find meaning in my life right now. At the moment, I am probably thinking of my next blog post, solving the Rubik's cude, learning French, writing some code, drinking water or sleeping.  
           </p>
           <p>The greatest advice I have ever gotten is to wear my mind like a garment and wash it whenever it was dirty &mdash; I gave myself this advice. </p>
           <p>To answer the big question above &mdash; there is a lot to know about people, but there isn't much to know about me, although I like to believe I know a lot about myself.</p>
@@ -33,11 +33,11 @@ layout: default
       </div>
       <div class="row mb-5">
         <div class="col-12" data-aos="fade-up" data-aos-delay="300">
-          <img src="{{ "/images/hero_1.jpg" | relative_url }}" alt="Image" class="img-fluid card">
+          <img src="{{ "/images/vikatsea.jpg" | relative_url }}" alt="Image" class="img-fluid card">
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4" data-aos="fade-up" data-aos-delay="400"><span class="text-primary">|&mdash;| At 16, I wrote this letter to my friends |&mdash;|</span>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="400"><span class="text-primary">|&mdash; At 16 years of age, I wrote this letter to my friends &mdash;|</span>
         </div>
         <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
           <p>The world is indeed chaotic and full of problems as well as beautiful things and people all encompassed in nature so unimaginably designed. </p>
@@ -47,9 +47,10 @@ layout: default
           <p class="mb-5">I fear each day for what might be, but I am extremely excited for the things that I will wrath. <br> <em>So walk with me.</em></p>
           <div class="d-flex coordinator align-items-center">
             <div class="mr-4">
-              <img src="{{ "/images/person_2.jpg" | relative_url }}" alt="Image" class="img-fluid card">
+              <img src="{{ "/images/viktor.jpg" | relative_url }}" alt="Image" class="img-fluid card">
             </div>
-            <span>By <span class="text-white">Viktor Tochi</span> <br> Founder and CEO &mdash; Youujet! Inc.</span>
+            <span>By &mdash; <span class="text-white">Viktor Tochi.</span> 
+            <!--<br> Founder and CEO &mdash; Youujet! Inc.</span>-->
           </div>
         </div>
       </div>
