--- a/gallery/index.html
+++ b/gallery/index.html
@@ -17,10 +17,10 @@ layout: default
     <div class="container">
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-          <a href="{{ "/gallery/portraits/" | relative_url }}"><img src="{{ "/images/person_1.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
+          <a href="{{ "/gallery/portraits/" | relative_url }}"><img src="{{ "/images/img_15.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
         </div>
         <div class="col-lg-6 ml-auto">
-          <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Portraits</h2>
+          <h2 class="text-white mb-4 " data-aos="fade-right" data-aos-delay="200">Portraits</h2>
           <div class="bio pl-lg-5">
             <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300"> <a href="{{ "/gallery/portraits/" | relative_url }}">Explore Portraits</a></span>
             <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Portraits tell complex stories about people and their faces. It is in these expressions that we discover the little intricases of our personhood that otherwise would have been long lost. 
@@ -31,7 +31,7 @@ layout: default
       </div>
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0 order-lg-2" data-aos="fade" data-aos-delay="100">
-          <a href="{{ "/gallery/nature/" | relative_url }}"><img src="{{ "/images/person_2.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
+          <a href="{{ "/gallery/nature/" | relative_url }}"><img src="{{ "/images/nature_small_9.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
         </div>
         <div class="col-lg-6 ml-auto order-lg-1">
           <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Nature</h2>
@@ -44,10 +44,10 @@ layout: default
       </div>
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-          <a href="{{ "/gallery/people/" | relative_url }}"><img src= "{{ "/images/person_3.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
+          <a href="{{ "/gallery/people/" | relative_url }}"><img src= "{{ "/images/img_30.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
         </div>
         <div class="col-lg-6 ml-auto">
-          <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">People</h2>
+          <h2 class="text-white mb-4 " data-aos="fade-right" data-aos-delay="200">People</h2>
           <div class="bio pl-lg-5">
             <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300"><a href="{{ "/gallery/people/" | relative_url }}">Explore People</a></span>
             <p class="mb-4" data-aos="fade-right" data-aos-delay="400">People are different everywhere. People have completely different life experiences. People make life exciting to live. I love people. 
@@ -58,13 +58,13 @@ layout: default
       </div>
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0 order-lg-2" data-aos="fade" data-aos-delay="100">
-          <a href="{{ "/gallery/events/" | relative_url }}"><img src= "{{ "/images/person_4.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
+          <a href="{{ "/gallery/places/" | relative_url }}"><img src= "{{ "/images/img_70.jpg" | relative_url }}" alt="Image" class="img-fluid card"></a>
         </div>
         <div class="col-lg-6 ml-auto order-lg-1">
-          <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Events</h2>
+          <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Places</h2>
           <div class="bio pr-lg-5">
-            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300"><a href="{{ "/gallery/events/" | relative_url }}">Explore Events</a></span>
-            <p class="mb-4" data-aos="fade-left" data-aos-delay="400">The events that we will remember are those that made a mark in our lives. They could be bad or good but they leave us with memories that we must look back on and hopefully we will all look back fondly.</p>
+            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300"><a href="{{ "/gallery/places/" | relative_url }}">Explore Places</a></span>
+            <p class="mb-4" data-aos="fade-left" data-aos-delay="400">The places that we will remember are those that made a mark in our lives. They could be bad or good but they leave us with memories that we must look back on and hopefully we will all look back fondly.</p>
            
           </div>
         </div>
