--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ title: Home
           <p class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="300"> &mdash; Most times, I am either trying to work or sleeping in..</p>
           
           <a href="#blog" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Read Blog</span></a>
+          <a href="{{ "/gallery/index.html" | relative_url }}" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Explore Photo Gallery</span></a>
         </div>
       </div>
     </div>
@@ -28,19 +29,19 @@ title: Home
       </div>
       <div class="row align-items-center speaker">
         <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-          <img src="{{ "/images/person_1.jpg" | relative_url }}" alt="Image" class="img-fluid card">
+          <img src="{{ "/images/victor.jpeg" | relative_url }}" alt="Image" class="img-fluid card">
         </div>
         <div class="col-lg-6 ml-auto">
-          <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Viktor Tochi</h2>
+          <h2 class="text-white mb-4 " data-aos="fade-right" data-aos-delay="200">Viktor Tochi</h2>
           <div class="bio pl-lg-5">
             <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Development Economist | Web Developer | Data Analyst</span>
-            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">I am <strong>Viktor Tochi Okoro.</strong> <br>I studied Development Economics at Berkeley, but these days I write code for a living. I strongly believe in lifelong learning thats why surfing google and stack overflow for resolved issues and bug fixes is my hobby. <br> My life is quite messy on its periphery but at its core I live to make small positive changes in my immediate communities because the world is quite too big for me for now. 
+            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">I am <strong>Viktor Tochi Okoro.</strong> <br>I studied Development Economics at Berkeley, but these days I write code for a living. I strongly believe in lifelong learning and that is why surfing google and stack overflow for resolved issues and bug fixes is my hobby. <br> My life is quite messy on the periphery but at its core I love to make small positive changes in my immediate communities because the world is quite too big for me, for now. 
             </p>
             <p data-aos="fade-right" data-aos-delay="500">
-              Read more about Vik <a href="{{ "/about" | relative_url }}">HERE!</a>
+              Read more about me <a href="{{ "/about" | relative_url }}">HERE!</a>
             </p>
             <p data-aos="fade-right" data-aos-delay="500">
-              &mdash; Follow Viktor Tochi &mdash;
+              &mdash; I am a social too so follow me! &mdash;
               <a href="#" class="p-2"><span class="icon-linkedin"></span></a>
               <a href="#" class="p-2"><span class="icon-twitter"></span></a>
               <a href="#" class="p-2"><span class="icon-github"></span></a>
@@ -74,7 +75,7 @@ title: Home
           <h2 class="mb-4"><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a></h2>
           <div class="mb-4 post-meta d-flex align-items-center">
             <!--<div class="mr-2"><img src="{{ "/images/img_30.jpg" | relative_url }}" alt="Image" class="img-fluid card"></div>-->
-            <div><span>By <a href="#blog">{{ post.author }}</a></span> &mdash; <span>{{ post.date | date: '%B %d, %Y' }}</span></div>
+            <div><!--<span>By <a href="#blog">{{ post.author }}</a></span>--> &mdash; <span>{{ post.date | date: '%B %d, %Y' }}</span></div>
           </div>
           <p>{{ post.excerpt | strip_html | truncatewords: 60 }}</p>
         </div>
