Fix contact form and blog posts

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -9,6 +9,7 @@ layout: default
         <div class="col-md-10">
           <span class="d-block mb-3 caption" data-aos="fade-up">Once in a while, I take photos and they look okay.</span>
           <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Explore Gallery</h1>
+          <h2 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">COMING SOON!</h2>
         </div>
       </div>
     </div>
