--- a/contact/index.html
+++ b/contact/index.html
@@ -7,7 +7,7 @@ layout: default
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-10">
-          <span class="d-block mb-3 caption" data-aos="fade-up">Got a job for me? Get In Touch</span>
+          <span class="d-block mb-3 caption" data-aos="fade-up">Got a question/thought/job for me? Get In Touch</span>
           <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Contact Vik</h1>
         </div>
       </div>
@@ -17,27 +17,27 @@ layout: default
     <div class="container">
       <div class="row">
         <div class="col-md-6" data-aos="fade-up">
-          <form action="#">
+          <form action="https://formspree.io/mjvwvojw" method="POST">
             <div class="row form-group">
               <div class="col-md-6 mb-3 mb-md-0">
                 <label class="" for="fname">First Name</label>
-                <input type="text" id="fname" class="form-control">
-              </div>
+                <input type="text" id="fname" name="firstname" class="form-control">
+              </div> 
               <div class="col-md-6">
                 <label class="" for="lname">Last Name</label>
-                <input type="text" id="lname" class="form-control">
+                <input type="text" id="lname" name="lastname" class="form-control">
               </div>
             </div>
             <div class="row form-group">
               <div class="col-md-12">
                 <label class="" for="email">Email</label>
-                <input type="email" id="email" class="form-control">
+                <input type="email" id="email" name="_replyto" class="form-control">
               </div>
             </div>
             <div class="row form-group">
               <div class="col-md-12">
                 <label class="" for="subject">Subject</label>
-                <input type="subject" id="subject" class="form-control">
+                <input type="subject" id="subject" name="subject" class="form-control">
               </div>
             </div>
             <div class="row form-group">
@@ -57,11 +57,13 @@ layout: default
           <div class="p-4 mb-3">
             <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Address</p>
             <p class="mb-4">Abuja, Nigeria</p>
+            <!--
             <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Phone</p>
             <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
             <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Email Address</p>
             <p class="mb-0"><a href="#"><span class="__cf_email__"
                   data-cfemail="5e27312b2c3b333f37321e3a31333f3730703d3133">[email&#160;protected]</span></a></p>
+            -->
           </div>
         </div>
       </div>
