--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -8,35 +8,71 @@ description: A blog about the gracefulness and failures that life gives
 
 
 <div class="site-section site-hero inner">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-10">
-          <span class="d-block mb-3 caption" data-aos="fade-up">Welcome to Viktor Tochi's blog.</span>
-          <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">A blog about life and things</h1>
-        </div>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-10">
+        <span class="d-block mb-3 caption" data-aos="fade-up">Welcome to Viktor Tochi's blog.</span>
+        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">A blog about life and things</h1>
       </div>
     </div>
   </div>
-  <div class="site-section">
-    <div class="container">
-      <div class="row mb-5">
-        {% for post in site.posts %}
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 blog-entry" data-aos="fade-up" data-aos-delay="200">
-          <a href="{{site.baseurl}}{{post.url}}" class="d-block mb-4">
-            <img src="{{ "/images/img_1.jpg" | relative_url }}" alt="Image" class="img-fluid card">
-          </a>
-          <h2 class="mb-4"><a href= "{{site.baseurl}}{{ post.url }}" | relative_url }}" >{{ post.title }}</a></h2>
-          <div class="mb-4 post-meta d-flex align-items-center">
-            <!--<div class="mr-2"><img src="{{ "/images/img_30.jpg" | relative_url }}" alt="Image" class="img-fluid card"></div>-->
-            <div><!--<span>By <a href="#">{{ post.author }}</a></span> -->&mdash; <span>{{ post.date | date: '%B %d, %Y' }}</span></div>
-          </div>
-          <p>{{ post.excerpt | strip_html | truncatewords: 60 }}</p>
-          
+</div>
+<div class="site-section">
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-12">
+        <div class="site-section-heading">
+          <h2 class="text-center">Categories</h2>
         </div>
-        {% endfor %}
+      </div>
+
+      
+      {% for category in site.categories %}
+
+      <div class="col-lg-3" style="margin:20px;">
+        <h3>{{ category[0] }}</h3>
+        <ul style="padding:10px;">
+          {% for post in category[1] %}
+          <li><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+
+      {% endfor %}
+
+    </div>
+
+
+    <div class="row mb-5">
+      <div class="col-12">
+        <div class="site-section-heading">
+          <h2 class="text-center">All Posts</h2>
+        </div>
       </div>
       <hr>
       <hr>
-      <hr>
+
+      {% for post in site.posts %}
+      <div class="col-md-6 col-lg-4 mb-5 mb-lg-5 blog-entry " style="margin-top: 20px;" data-aos="fade-up"
+        data-aos-delay="200">
+        <a href="{{site.baseurl}}{{post.url}}" class="d-block mb-4">
+          <img src="{{ "/images/img_1.jpg" | relative_url }}" alt="Image" class="img-fluid card">
+        </a>
+        <h2 class="mb-4"><a href="{{site.baseurl}}{{ post.url }}" | relative_url }}">{{ post.title }}</a></h2>
+        <div class="mb-4 post-meta d-flex align-items-center">
+          <!--<div class="mr-2"><img src="{{ "/images/img_30.jpg" | relative_url }}" alt="Image" class="img-fluid card"></div>-->
+          <div>
+            <!--<span>By <a href="#">{{ post.author }}</a></span> -->&mdash; <span
+              class="font-weight-bold">{{ post.categories }}</span> &mdash;
+            <span>{{ post.date | date: '%B %d, %Y' }}</span></div>
+        </div>
+        <p>{{ post.excerpt | strip_html | truncatewords: 60 }}</p>
+
+      </div>
+      {% endfor %}
     </div>
+    <hr>
+    <hr>
+    <hr>
   </div>
+</div>
